kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-app
  namespace: my-dev-env
spec:
  replicas: 2
  selector:
    matchLabels:
      app: next-app
  template:
    metadata:
      labels:
        app: next-app
    spec:
      containers:
        - name: next-app
          image: ghcr.io/username/my-dev-env:latest # заменишь на свой образ
          ports:
            - containerPort: 3000
