kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-app
  namespace: my-dev-env
spec:
  selector:
    app: next-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
