kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-app-ingress
  namespace: my-dev-env
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mydev.local   # заменишь на свой домен
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-app
                port:
                  number: 80
